--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bmfaccount.github.io/OneManStudioSite/",
+  "homepage": "https://bmfaccount.github.io/OneManStudioSite",
   "name": "one-man-studio-website",
   "version": "0.1.0",
   "private": true,
